k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uug-demo-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: uug-demo-api
  template:
    metadata:
      labels:
        app: uug-demo-api
    spec:
      containers:
      - image: ghcr.io/ripleymj/uug-demo-api:f28940fedf281acad7646981ace4c0be4679d1a7
        name: uug-demo-api
        ports:
        - containerPort: 3000
