k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uug-demo-api
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: uug-demo-api
